modernize(backend,ml,database,hld,python,technologies): replace stale content, fix 3 fabricated deprecations
Four of five wave-1 batches. 48 files, +421 -381. The rule is REPLACE, DO NOT ANNOTATE:
write the current form as if it had always been there, keeping only the three exceptions
(broken->fixed pair where the old form IS the lesson, an explicit migration/history
section, and deprecation-as-subject material teaching the DISCIPLINE of handling
deprecation). 12 of the 78 grep-flagged files were judged legitimate and left untouched --
all five lld files among them, since an anti-pattern module discussing decaying code IS
the subject, not archaeology.

VERSION CONSTANTS, verified by the dispatcher and handed to every agent identically so the
sections cannot contradict each other: Spring Boot 4.1.x (GA 2026-06-10), Spring Framework
7.x, Spring Cloud 2025.1.0 "Oakwood", Java 25 LTS (26 latest non-LTS, 27 due Sept 2026).

BACKEND was internally INCONSISTENT before this -- connection_pooling said Boot 4.1 while
async_and_concurrency said 3.2 and distributed_system_operational_patterns said 2.3. A
section that disagrees with itself is worse than one uniformly stale, because the reader
cannot tell which page to trust. Now uniform. Also: @MockBean/@SpyBean REMOVED in Boot 4.0
(not deprecated) -> @MockitoBean/@MockitoSpyBean; Undertow dropped for the Servlet 6.1
baseline; -Djarmode=layertools -> -Djarmode=tools extract --layers (layertools is gone in
4.1); graceful shutdown default-on; eclipse-temurin 21-jre -> 25-jre and distroless java21
-> java25; MaxRAMFraction -> MaxRAMPercentage; ZGC generational-only since JDK 24,
Shenandoah generational a product feature in JDK 25. Kafka's "Java 11/17" is Apache
Kafka's own module-support statement, verified verbatim and correctly LEFT.

THREE FABRICATED DEPRECATIONS REMOVED -- the inverse of the defect this pass targets:
  - ml/distributed_training claimed "DataParallel -- deprecated for multi-GPU". PyTorch
    has never deprecated